--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pillow = "^10.0.0"
 djangorestframework = "^3.14.0"
 strawberry-graphql = {extras = ["debug-server"], version = "^0.205.0"}
 strawberry-graphql-django = "^0.16.0"
+pyjwt = "^2.8.0"
 
 
 [build-system]
