--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ strawberry-graphql-django = "^0.16.0"
 pyjwt = "^2.8.0"
 django-environ = "^0.10.0"
 django-cors-headers = "^4.2.0"
+requests = "^2.31.0"
 
 
 [build-system]
