--- a/render.yaml
+++ b/render.yaml
@@ -10,11 +10,11 @@ services:
     region: singapore
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn mysite.wsgi:application"
+    startCommand: "gunicorn config.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: airbnbclone
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
